--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "require_once",
   "version": "0.0.1",
   "description": "A file loader for browser javascript and eventually node as well",
-  "main": "require-once.min.js",
+  "main": "require_once.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
